# shared-editor

./: .gitignore  CMakeLists.txt  Message.cpp  Message.h  NetworkServer.cpp  NetworkServer.h  README.md  SharedEditor.cpp  SharedEditor.h  SharedEditorClient.cpp  SharedEditorClient.h  SharedEditorClient.pro  Symbol.cpp  Symbol.h  confirmpassword.cpp  confirmpassword.h  confirmpassword.ui  confirmpassworddialog.cpp  confirmpassworddialog.ui  controller.cpp  controller.h  controller.ui  dialogs.pri  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  notepad.cpp  notepad.h  notepad.qrc  notepad.ui  onlineUsers.cpp  onlineUsers.h  onlineUsersDialog.cpp  onlineusersdialog.cpp  onlineusersdialog.h  onlineusersdialog.ui  openfiledialog.cpp  openfiledialog.h  openfiledialog.ui  (+16 more)
dialogs/: confirmpassworddialog.cpp  confirmpassworddialog.h  dialogs.pri  onlineusersdialog.cpp  onlineusersdialog.h  openfiledialog.cpp  registrationdialog.cpp  registrationdialog.h  updateformdialog.cpp  updateformdialog.h
mock/: mock.pri  networkserver.cpp  networkserver.h
network/: network.pri  socketclient.cpp  socketclient.h
network/messages/: cursorpositionmessage.cpp  cursorpositionmessage.h  documentmessage.cpp  documentmessage.h  editingmessage.cpp  editingmessage.h  header.cpp  header.h  messageType.h  messages.pri  (+4 more)
shared_editor/: cursorpositionmessage.cpp  cursorpositionmessage.h  editingmessage.cpp  editingmessage.h  remoteuser.cpp  remoteuser.h  shared_editor.pri  sharededitor.cpp  sharededitor.h  symbol.cpp  symbol.h  texteditoreventfilter.cpp  texteditoreventfilter.h
